# DEWI-Design-for-an-Entropy-Weighted-Index-for-Text-Image-Corpora

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USAGE.md
docs/schemas/: dewi_config.schema.json  payload.schema.json
scripts/: gatekeeper_audit.py  profile_index.py
src/dewi/: __init__.py  __main__.py  backends.py  cli.py  config.py  index.py  local_weights.py  metrics.py  pipelines.py  robust.py  schemas.py  scorer.py  scoring.py  signals.py  types.py
src/dewi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/dewi/signals/: __init__.py  cross_modal.py  image_entropy.py  noise.py  redundancy.py  text_entropy.py
tests/: conftest.py  test_cli.py  test_cli_config.py  test_cli_helper.py  test_index.py  test_index_delegation.py  test_index_roundtrip.py  test_redundancy_clip.py  test_schemas.py  test_scorer_weights.py  test_signals.py
