[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dewi"
version = "0.1.0"
description = "DEWI: A Design for an Entropy-Weighted Index for Text+Image Corpora"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DEWI Team", email = "dewi@example.com"}
]
maintainers = [
    {name = "DEWI Maintainers", email = "dewi-maintainers@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Graphics",
    "Operating System :: OS Independent"
]
keywords = ["information-retrieval", "machine-learning", "nlp", "computer-vision", "search"]
dependencies = [
    # Core dependencies
    "numpy>=1.21.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "faiss-cpu>=1.7.0; platform_system!='Darwin' and platform_machine!='arm64'",
    "faiss-cpu-noavx2>=1.7.0; platform_system=='Darwin' and platform_machine=='arm64'",
    "Pillow>=9.0.0,<11.0.0",
    "tqdm>=4.62.0,<5.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.0.0,<9.0.0",
    "hnswlib>=0.7.0,<0.8.0",
    "pydantic>=1.10.0,<3.0.0",
    "dataclasses>=0.6; python_version<'3.7'"
]

[project.urls]
Homepage = "https://github.com/yourusername/dewi"
Documentation = "https://github.com/yourusername/dewi#readme"
Bug Tracker = "https://github.com/yourusername/dewi/issues"
Changelog = "https://github.com/yourusername/dewi/releases"

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=3.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    
    # Linting & Formatting
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pylint>=2.15.0,<3.0.0",
    "ruff>=0.0.280,<0.1.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-dataclasses>=0.6.0,<1.0.0",
    
    # Documentation
    "sphinx>=6.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.2.0,<2.0.0",
    "sphinx-click>=4.4.0,<5.0.0",
    "myst-parser>=1.0.0,<2.0.0",
    
    # Development tools
    "jupyter>=1.0.0,<2.0.0",
    "ipython>=8.0.0,<9.0.0",
    "pre-commit>=3.0.0,<4.0.0"
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pandas.*", "numpy.*", "torch.*"]
ignore_missing_imports = true

[tool.pylint]
master = true
load-plugins = "pylint.extensions.docparams"

[project.scripts]
dewi = "dewi.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dewi*"]

[tool.pytest.ini_options]
addopts = "-v --cov=dewi --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["dewi"]
omit = [
    "**/tests/*",
    "**/__pycache__/*",
    "**/test_*.py"
]
[coverage:report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
